--- a/src/pages/zh/profile.astro
+++ b/src/pages/zh/profile.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import { useTranslations } from "../../i18n/utils";
+import { useTranslations, getLangFromUrl } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 // biome-ignore lint/correctness/noUnusedVariables: Used in template
