refactor(privacy): enable static prerendering to decouple from runtime auth

--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,4 +1,4 @@
-import Layout from "../layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro"; export const prerender = true;
 
 <Layout title="Privacy Policy">
   <div class="max-w-3xl mx-auto py-12">
